FullLayout: fix logo centering
I think this got broken in a new version of chrome

--- a/client/layouts/FullLayout.scss
+++ b/client/layouts/FullLayout.scss
@@ -9,6 +9,7 @@
     background-color: $dark;
     line-height: 28px;
     margin-bottom: 20px;
+    text-align: center;
   }
 
   a.logo {
